test/parser/positive/ImplicitSuperCall.java
public class ImplicitSuperCall extends java.lang.Thread {
  public ImplicitSuperCall() { /* super(); */}
}
