test/parser/negative/PackagePrivateClasses.java
package dovs.joos.features;

/* package private */ class PackagePrivateClasses {}
